--- a/agendamento-vacina/package.json
+++ b/agendamento-vacina/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "yup": "^0.32.11"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
