--- a/agendamento-vacina/package.json
+++ b/agendamento-vacina/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "axios": "^0.26.1",
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
