--- a/agendamento-vacina/package.json
+++ b/agendamento-vacina/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.0",
     "react-scripts": "0.9.5",
     "yup": "^0.32.11"
   },
