--- a/agendamento-vacina/package.json
+++ b/agendamento-vacina/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
-    "axios": "^0.26.1",
+    "axios": "0.21.1",
     "formik": "^2.2.9",
-    "react": "^18.0.0",
+    "moment": "^2.29.3",
+    "react": "17.0.2",
     "react-datepicker": "^4.7.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "5.3.0",
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "0.9.5",
     "yup": "^0.32.11"
   },
